--- a/movie-suggestion-app/src/index.scss
+++ b/movie-suggestion-app/src/index.scss
@@ -13,7 +13,7 @@ html body {
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
     min-height: -webkit-fill-available;
-    color: rgba(255, 255, 255, 0.87);
+    color: #f8faff;
     background: linear-gradient(161deg, rgb(11 10 23) 0%, rgb(40, 33, 79) 100%);
     background-size: cover;
 }
