--- a/movie-suggestion-app/src/style/App.scss
+++ b/movie-suggestion-app/src/style/App.scss
@@ -1,7 +1,9 @@
 .homepage {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    padding-top: 1rem;
+    height: calc(100vh - 6rem);
+    max-height: calc(100vh - 6rem);
 }
 .auth-page {
     display: flex;
@@ -129,12 +131,25 @@ button {
 .ai-search {
     display: flex;
     flex-direction: column;
-    height: 100%;
     align-items: center;
     width: 80%;
-    transform: translateY(30%);
     margin: 0 auto;
     column-gap: 0.2rem;
+    flex-grow: 1;
+    // display: flex;
+    // flex-direction: column;
+    // height: 100%;
+    // align-items: center;
+    // width: 80%;
+    // transform: translateY(30%);
+    margin: 0 auto;
+    column-gap: 0.2rem;
+    &__results {
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: row;
+        column-gap: 3rem;
+    }
 }
 
 .icon {
@@ -143,4 +158,12 @@ button {
 }
 .card {
     display: flex;
+    flex-direction: column;
+    border: 2px solid #5748ad;
+    width: 100%;
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: max(10rem, 30vh);
+    }
 }
